--- a/core/pom.xml
+++ b/core/pom.xml
@@ -68,10 +68,10 @@
             <version>1.3.154</version>
         </dependency>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.3</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
