--- a/functional-tests/pom.xml
+++ b/functional-tests/pom.xml
@@ -95,7 +95,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.6</version>
+                <version>2.17</version>
                 <executions>
                     <execution>
                         <phase>integration-test</phase>
@@ -108,7 +108,9 @@
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
+                <version>1.0</version>
                 <configuration>
+                    <wait>false</wait>
                     <configuration>
                         <properties>
                             <cargo.servlet.port>${test.port}</cargo.servlet.port>
